--- a/webapp/src/main/resources/templates/test.html
+++ b/webapp/src/main/resources/templates/test.html
@@ -9,8 +9,10 @@
 
 </head>
 <body>
-    <p>This is a test.</p>
-    <!--/*@thymesVar id="numOfBooks" type=""*/-->
-    <p th:text="${numOfBooks} + ' is a temp variable showing thymeleaf connectivity to the IndexController. [WILL BE DELETED]'"></p>
+       <form action="#" th:action="@{/greeting}" th:object="${greeting}" method="post">
+    	<p>Id: <input type="text" th:field="*{id}" /></p>
+        <p>Message: <input type="text" th:field="*{content}" /></p>
+        <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+    </form>
 </body>
 </html>
