--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -80,9 +80,8 @@
                 <li><a href="#home-section" class="nav-link">Home</a></li>
                 <li><a href="#events-section" class="nav-link">Events</a></li>
                 <li><a href="#staff-picks-section" class="nav-link">Staff Picks</a></li>
-			<!--<li><a href="#event-details" class="nav-link">Event History</a></li> -->
-          		<li><a href="" class="nav-link">Photos</a></li>         
-          		<li><a href="" class="nav-link">Search</a></li>
+          		<li><a href="https://www.central-bookexchange.com/cart" class="nav-link">Old Store</a></li>         
+          		<li><a href="https://www.central-bookexchange.com/offline-search" class="nav-link">Search</a></li>
               </ul>
             </nav>
           </div>
@@ -103,9 +102,9 @@
           <div class="col-md-12" data-aos="fade-up" data-aos-delay="400">
                         
             <div class="row mb-4">
-              <div class="col-md-8" th:style="'background: rgb(6,6,8,0.75); box-shadow: 0 4px 8px 0 rgba(0, 0, 0), 0 6px 20px 0 rgba(0, 0, 0, 0.49)'">
-                <h1 class="ff-JSH text-cream">Welcome</h1>
-                <p class="mb-4 text-white ff-NS">We are an independently-owned new and used bookstore located in Salt Lake City, Utah. 
+              <div class="col-md-8" th:style="'background: rgb(6,6,8,0.80); box-shadow: 0 4px 8px 0 rgba(0, 0, 0), 0 6px 20px 0 rgba(0, 0, 0, 0.49)'">
+                <h1 class="ff-JSW text-cream">Welcome</h1>
+                <p class="mb-4 text-white ff-NW">We are an independently-owned new and used bookstore located in Salt Lake City, Utah. 
                   We have over 90,000 items in our constantly-changing inventory, and we catalog an additional 1,000+ books per week. 
                   Our inventory consists of almost every literary genre you can think of. Additionally, our book inventory holds some rare and out-of-print titles.
              <!-- <br><br>If you have any questions, please give us a <a href="tel:8014853913">call</a> or <a href="mailto:customerservice@citywbooks.com">email</a> us. <br>We're always happy to help! -->
@@ -364,26 +363,6 @@
       </div>
     </div>
 
-    
-    <!--
-    <div class="site-blocks-cover overlay get-notification" id="special-section" th:style="'background: url(/images/storefront/central.jpg)  no-repeat 50% fixed / cover;'" data-aos="fade">
-      <div class="container">
-
-        <div class="row align-items-center justify-content-center">
-          <div class="col-md-7 text-center">
-            <h3 class="section-sub-title">Special Promo</h3>
-            <h3 class="section-title text-white mb-4">Summer Sale</h3>
-            <p class="mb-5 lead">Repudiandae nostrum natus excepturi fuga ullam accusantium vel ut eveniet aut consequatur laboriosam ipsam.</p>
-
-            <div id="date-countdown" class="mb-5"></div>
-
-            <p><a href="#" class="btn btn-white btn-outline-white py-3 px-5 rounded-0 mb-lg-0 mb-2 d-block d-sm-inline-block">Shop Now</a></p>
-          </div>
-        </div>
-
-      </div>
-    </div>
-    -->
 
    <div class="site-blocks-cover inner-page-cover overlay get-notification"  style="'background: url(/images/storefront/mainPic.jpg)  no-repeat 50% fixed / cover;'" data-aos="fade">
      <div class="container" th:style="'background: rgb(0,0,0,0.3);'">
